# research-optimization-of-decision-tree-evaluation

./: CMakeLists.txt  README.md
apply/: avx_apply.cpp  avx_apply.h  mxnet_sse_apply.h  naive_apply.h
binarization/: avx_binarization.cpp  avx_binarization.h  mxnet_sse_binarization.h  naive_binarization.h
binarization_formats/: avx_format.h  mxnet_sse_format.h  naive_format.h  subbatch.h
test_stand/: generate_model.h  test_stand.cpp  test_stand.h
util/: model.h  util.h
